segundo guardado(media querys)

--- a/css/style.css
+++ b/css/style.css
@@ -109,11 +109,11 @@ p {
 }
 
 .contenedor1 {
-    background-image: url("../img/imagen1.jpg");
+    background-image: url("../img/imagen1.1.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 448px;
+    height: 510px;
     width: 72%; 
     margin: 10px auto;
     border: 1px solid darkred;
@@ -162,10 +162,156 @@ footer {
     padding-left: 25px;
 }
 
+@media (max-width: 1360px) {
+ 
+    nav ul li {
+        display: inline; 
+        margin-right: auto;
+        padding-left: 3.5px;
+    }
 
-/*
-HISTORIA
-*/
+    .subtitulo {
+        font-size: 4rem; 
+    }
+
+    .parrafointro {
+        font-size: 1.6rem; 
+    }
+
+    .subtitulo4 {
+        font-size: 1.75rem; 
+    }
+}
+
+@media (max-width: 1280px) {
+    nav {
+        padding: 20px;
+        flex-direction: column; 
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column; 
+        align-items: flex-end; 
+        margin-top: 10px; 
+    }
+    
+    nav ul li {
+        margin: 10px 0; 
+    }
+
+    .subtitulo {
+        font-size: 4rem; 
+    }
+
+    .parrafointro {
+        font-size: 1.6rem; 
+    }
+
+    .subtitulo4 {
+        font-size: 1.75rem; 
+    }
+}
+
+@media (max-width: 1050px) {
+    nav {
+        padding: 20px;
+        flex-direction: column; 
+    }
+
+    nav ul {
+        display: flex;
+        flex-direction: column; 
+        align-items: flex-end; 
+        margin-top: 10px; 
+    }
+    
+    nav ul li {
+        margin: 10px 0; 
+    }
+
+    .subtitulo {
+        font-size: 4rem; 
+    }
+
+    .parrafointro {
+        font-size: 1.6rem; 
+    }
+
+    .subtitulo4 {
+        font-size: 1.75rem; 
+    }
+}
+
+@media (max-width: 768px) {
+    nav ul {
+        padding-left: 100px;
+        text-align: right; 
+    }
+    
+    nav ul li {
+        display: block;
+        margin: 10px 0; 
+    }
+
+    .subtitulo {
+        font-size: 3rem;
+    }
+
+    .parrafointro {
+        font-size: 1.5rem;
+    }
+
+    .subtitulo4 {
+        font-size: 1.5rem;
+    }
+
+    .contenedor1, .contenedor2, .contenedor3 {
+        height: 300px; 
+    }
+    footer {
+        justify-content: flex-end;
+    }
+}
+
+@media (max-width: 480px) {
+    nav ul {
+        padding-left: 300px;
+        text-align: right; 
+    }
+    
+    nav ul li {
+        display: block;
+        margin: 10px 0; 
+    }
+    nav h1 {
+        font-size: 30px;
+    }
+
+    .subtitulo {
+        font-size: 2rem;
+    }
+
+    .parrafointro {
+        font-size: 1.2rem;
+    }
+
+    .subtitulo4 {
+        font-size: 1.2rem;
+    }
+
+    footer {
+        display: block;
+        justify-content: center;
+        padding: 20px;
+    }
+
+    .titulo {
+        font-size: 30px;
+    }
+}
+
+/*HISTORIA*/
 
 .fondohistoria {
     min-height: 120vh;
@@ -245,6 +391,7 @@ HISTORIA
     font-family: "godofwar";
     color: darkred;
 }
+
 
 /* PERSONAJES */
 
